# beancount-tools-collection

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
src/beancount_tools_collection/: __init__.py
src/beancount_tools_collection/importers/: __init__.py  finpension.py  firefly_iii.py  ibkr.py  revolut.py  viac.py  viseca.py  yuh.py
src/beancount_tools_collection/plugins/: __init__.py
src/beancount_tools_collection/prices/: __init__.py  ibkr.py
src/beancount_tools_collection/scripts/: __init__.py
src/beancount_tools_collection/utils/: adapter.py  example_basic.py  transactionInspector.py
tests/: test_ibkr_live.py
